--- a/client/app.css
+++ b/client/app.css
@@ -1,66 +1,104 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+body,
+html {
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+}
 
 .switch-field {
-	display: flex;
-	margin-bottom: 36px;
-	overflow: hidden;
+  display: flex;
+  margin-bottom: 36px;
+  overflow: hidden;
 }
 
 .switch-field input {
-	position: absolute !important;
-	clip: rect(0, 0, 0, 0);
-	height: 1px;
-	width: 1px;
-	border: 0;
-	overflow: hidden;
+  position: absolute !important;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden;
 }
 
 .switch-field label {
-	background-color: #e4e4e4;
-	color: rgba(0, 0, 0, 0.6);
-	font-size: 14px;
-	line-height: 1;
-	text-align: center;
-	padding: 8px 16px;
-	margin-right: -1px;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-	transition: all 0.1s ease-in-out;
+  background-color: #e4e4e4;
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1;
+  text-align: center;
+  padding: 15px 25px;
+  margin-right: -1px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.1s ease-in-out;
 }
 
 .switch-field label:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .switch-field input:checked + label {
-	background-color: #a5dc86;
-	box-shadow: none;
+  background-color: #090979;
+  color: #fff;
+  box-shadow: none;
 }
 
 .switch-field label:first-of-type {
-	border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
 }
 
 .switch-field label:last-of-type {
-	border-radius: 0 4px 4px 0;
+  border-radius: 0 4px 4px 0;
+}
+
+.container {
+  margin: auto;
+  max-width: 800px;
+}
+
+.header {
+  padding: 2rem 1rem;
+  display: flex;
+}
+
+.header .title {
+  color: #090979;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  font-size: 3rem;
+  margin: auto;
+  font-weight: 400;
+}
+
+.flex-center {
+  padding: 3rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form {
-	max-width: 270px;
-	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
-	font-weight: normal;
-	line-height: 1.625;
-	margin: 8px auto;
-	padding-left: 16px;
-	z-index: 2;
+  width: 300px;
+  font-weight: normal;
+  line-height: 1.625;
+  margin: 8px auto;
+  padding-left: 16px;
+  z-index: 2;
+}
+
+.form input,
+.form select {
+  width: 100%;
 }
 
 h2 {
-	font-size: 18px;
-	margin-bottom: 8px;
+  font-size: 18px;
+  margin-bottom: 8px;
 }
-.area{
+.area {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
@@ -74,7 +112,7 @@ h2 {
   border-radius: 5px;
 }
 
-.location{
+.location {
   font-family: "Roboto", sans-serif;
   outline: 0;
   background: #f2f2f2;
@@ -88,47 +126,98 @@ h2 {
   border-radius: 5px;
 }
 
-.submit{
-  background: #a5dc86;
+.submit {
+  background: #090979;
+  color: #fff;
   width: 76%;
   border: 0;
   margin: 25px 0 10px;
   box-sizing: border-box;
   font-size: 15px;
-	height: 35px;
-	text-align: center;
-	border-radius: 5px;
+  height: 35px;
+  text-align: center;
+  border-radius: 5px;
 }
 
-.result{
-		background: #dcd686;
-		width: 76%;
-		border: 0;
-		margin: 25px 0 10px;
-		box-sizing: border-box;
-		font-size: 15px;
-		height: 35px;
-		text-align: center;
+.result {
+  background: #090979ca;
+  font-family: "Oswald";
+  padding: 1rem;
+  margin: auto auto;
+  text-align: center;
+  color: #fff;
+  border-radius: 20px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.result h2 {
+  font-size: 2rem;
+  margin: 0;
+}
+.result h2 span {
+  font-weight: bold;
 }
 
 .img {
-  background: url('https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-	background-repeat: no-repeat;
+  background: url("bg.jpeg");
+  background-repeat: no-repeat;
   background-size: auto;
-  background-size:100% 100%;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(15px);
+  background-size: 100% 100%;
+  z-index: -1;
+  filter: blur(5px);
+}
+.img-backdrop {
+  background: #0575e6; /* fallback for old browsers */
+  background: linear-gradient(
+    to left,
+    #021c7959,
+    #0576e61c,
+    #fff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: -1;
+  /* background: ; */
+}
+
+select {
+  text-transform: capitalize;
+}
+
+.bg {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: -1;
 }
 
-body, html {
-  height: 100%;
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #090979 0%,
+    #26d0ce 51%,
+    #090979 100%
+  );
+}
+.btn-grad {
+  margin: 20px 0;
+  width: 100%;
+  padding: 15px 50px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  border: none;
+  cursor: pointer;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  box-shadow: 0px 15px 20px #09097949;
+
+  text-decoration: none;
 }
